# project-1_kolovorotnyy_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: main.py
