[project]
name = "project-1-kolovorotnyy-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "s.kolovorotnyy"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
