[project]
name = "project-1-kolovorotnyy-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "s.kolovorotnyy"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.13.2,<0.14.0"

[tool.ruff]
line-length = 80
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
